--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
             <div class="container main-container">
             <h1 class="visually-hidden ">Герой</h1>
             <ul class="main-list list">
-                <li class="main-item"><button class="btn" type="button">Все</button></li>
+                <li class="main-item"><button class="btn active-button" type="button">Все</button></li>
                 <li class="main-item"><button class="btn" type="button">Веб-сайты</button></li>
                 <li class="main-item"><button class="btn" type="button">Приложения</button></li>
                 <li class="main-item"><button class="btn" type="button">Дизайн</button></li>
@@ -106,7 +106,7 @@
                 <div class="main-item-bottom">
                     <h2 class="main-title-secondary" lang="en">Inspiration has no Borders</h2>
                     <p class="main-text">Веб-сайт</p>
-                </div class="main-item-bottom">
+                </div>
                 </a>
                 </li>
                 <li class="main-item-secondary">
@@ -157,7 +157,7 @@
                     </address>
                 </div>
                 <div class="footer-right">
-                    <h3 class="footer-title">присоединяйтесь</h3>
+                    <p class="footer-title">присоединяйтесь</p>
                     <ul class="footer-social-list list">
                         <li class="footer-social-item">
                             <a href="" class="footer-social-link">
