--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             </ul>
         </div>
         </section>
-        <section class="clients section">
+    <section class="clients section">
             <div class="container clients-container">
                 <h2 class="title">Постоянные клиенты</h2>
                 <ul class="clients-list">
@@ -311,7 +311,7 @@
                     </li>
                 </ul>
             </div>
-        </section>
+    </section>
     </main>
     <footer class="footer">
         <div class="container footer-container">
@@ -330,7 +330,7 @@
         </address>
         </div>
         <div class="footer-right">
-            <h3 class="footer-title">присоединяйтесь</h3>
+            <p class="footer-title">присоединяйтесь</p>
             <ul class="footer-social-list list">
                 <li class="footer-social-item">
                     <a href="" class="footer-social-link">
