--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     <section class="clients section">
             <div class="container clients-container">
                 <h2 class="title">Постоянные клиенты</h2>
-                <ul class="clients-list">
+                <ul class="clients-list list">
                     <li class="clients-item">
                         <a href="" class="clients-link">
                          <svg class="clients-icon">
